--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,5 +1,5 @@
-@import "epretest/variables";
-@import "bootstrap";
-@import "bootstrap/theme";
-@import "epretest/theme";
-@import "style";
+@import 'epretest/variables';
+@import 'bootstrap';
+@import 'bootstrap/theme';
+@import 'epretest/theme';
+@import 'style';
