--- a/sass/epretest/_theme.scss
+++ b/sass/epretest/_theme.scss
@@ -1,3 +1,21 @@
-.navbar-nav .navbar-transparent {
-  background: transpanrent;
+.navbar-nav {
+  border-radius: 0;
+}
+
+.navbar-header {
+  min-height: 80px;
+}
+
+.navbar-nav > li > a {
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+@media(min-width: 768px) {
+  .navbar-transparent {
+    background-color: transparent;
+    background-image: linear-gradient(180deg, transparent 0%, transparent 100%);
+    border-width: 0;
+    box-shadow: 0 0;
+  }
 }
