Some more restructure

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,5 +1,4 @@
-@import 'epretest/variables';
+@import 'epretest/bootstrap/variables';
 @import 'bootstrap';
-@import 'bootstrap/theme';
 @import 'epretest/theme';
 @import 'style';
