--- a/sass/epretest/bootstrap/_variables.scss
+++ b/sass/epretest/bootstrap/_variables.scss
@@ -1,3 +1,6 @@
 $border-radius-base: 0 !default;
 $border-radius-large: 0 !default;
 $border-radius-small: 0 !default;
+
+$btn-default-bg: #21abc7;
+$btn-default-color: #ffffff;
