--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,17 +1,37 @@
-@import 'epretest/variable'
+$splash-bg-color:       #fca311;
+$splash-overlay-start:  rgba($splash-bg-color, .45);
+$splash-overlay-end:    rgba($splash-bg-color, .45);
+$splash-color:          #fff;
 
-$splash-bg-color:   #fff;
-$splash-color:      #fff;
+$btn-color:             #fff;
 
 .logo-img {
   height: 50px;
 }
 
 .splash {
+  background: linear-gradient($splash-overlay-start, $splash-overlay-end), url('../img/splash.jpeg');
   background-attachment: fixed;
   background-color: $splash-bg-color;
-  background-image: url('../img/bg.jpg');
   background-size: cover;
-  color: $splash-primary-color;
+  color: $splash-color;
+  padding-bottom: 300px;
+  padding-top: 50px;
   text-align: center;
+}
+
+.btn-default {
+  background-image: none;
+  border-color: transparent;
+  color: $btn-color;
+  text-shadow: none;
+}
+
+.free-try {
+  margin-top: 40px;
+
+  .btn {
+    font-size: 20px;
+    padding: 10px 20px;
+  }
 }
