--- a/sass/epretest/bootstrap/_variables.scss
+++ b/sass/epretest/bootstrap/_variables.scss
@@ -3,4 +3,11 @@ $border-radius-large: 0 !default;
 $border-radius-small: 0 !default;
 
 $btn-default-bg: #21abc7;
-$btn-default-color: #ffffff;
+$btn-default-color: #fff;
+
+$navbar-height: 80px;
+$navbar-margin-bottom: 0;
+$navbar-padding-vertical: 15px;
+$navbar-padding-horizontal: 15px;
+
+$navbar-default-bg: transparent;
