--- a/sass/epretest/_theme.scss
+++ b/sass/epretest/_theme.scss
@@ -4,26 +4,4 @@
 @import 'bootstrap/buttons';
 @import 'bootstrap/fonts';
 @import 'bootstrap/normalize';
-
-.navbar {
-  border-radius: 0;
-  margin-bottom: 0;
-}
-
-.navbar-header {
-  min-height: 80px;
-}
-
-.navbar-nav > li > a {
-  padding-bottom: 30px;
-  padding-top: 30px;
-}
-
-@media(min-width: 768px) {
-  .navbar-transparent {
-    background-color: transparent;
-    background-image: linear-gradient(180deg, transparent 0%, transparent 100%);
-    border-width: 0;
-    box-shadow: 0 0;
-  }
-}
+@import 'bootstrap/navbar';
