--- a/sass/epretest/_theme.scss
+++ b/sass/epretest/_theme.scss
@@ -5,6 +5,7 @@
 @import 'bootstrap-custom/fonts';
 @import 'bootstrap-custom/normalize';
 @import 'bootstrap-custom/navbar';
+@import 'bootstrap-custom/scaffolding';
 
 @import 'epretest/variables';
 
