--- a/sass/epretest/epretest/_variables.scss
+++ b/sass/epretest/epretest/_variables.scss
@@ -3,3 +3,7 @@ $splash-color:            #fff;
 $splash-padding-bottom:   300px;
 $splash-padding-top:      50px;
 $splash-overlay-opacity:  .45;
+
+$exam-card-border:       #ccc;
+$exam-card-horz-padding: 15px;
+$exam-card-vert-padding: 5px;
