Style exam-card

--- a/sass/epretest/epretest/_variables.scss
+++ b/sass/epretest/epretest/_variables.scss
@@ -5,5 +5,7 @@ $splash-padding-top:      50px;
 $splash-overlay-opacity:  .45;
 
 $exam-card-border:       #ccc;
+$exam-card-bg-color:     #21abc7;
+$exam-card-color:        #fff;
 $exam-card-horz-padding: 15px;
-$exam-card-vert-padding: 5px;
+$exam-card-vert-padding: 15px;
