--- a/sass/epretest/epretest/pages/_home.scss
+++ b/sass/epretest/epretest/pages/_home.scss
@@ -14,7 +14,22 @@
 }
 
 .exam-card {
+  .title {
+    background-color: $exam-card-bg-color;
+    border:           1px solid $exam-card-bg-color;
+    color:            $exam-card-color;
+    padding:          0 $exam-card-horz-padding;
+  }
+
+  .subject-list {
+    li {
+      font-size: 20px;
+      line-height: 40px;
+      list-style: none;
+    }
+    padding:          $exam-card-vert-padding $exam-card-horz-padding;
+  }
+
   border:         1px solid $exam-card-border;
   border-radius:  4px;
-  padding:        $exam-card-vert-padding $exam-card-horz-padding;
 }
