Change splash color

--- a/sass/epretest/epretest/_variables.scss
+++ b/sass/epretest/epretest/_variables.scss
@@ -1,4 +1,4 @@
-$splash-bg-color:         #fca311;
+$splash-bg-color:         #34282c;
 $splash-color:            #fff;
 $splash-padding-bottom:   300px;
 $splash-padding-top:      50px;
