Add .-text-large and .-text-xlarge

--- a/sass/epretest/bootstrap-custom/_buttons.scss
+++ b/sass/epretest/bootstrap-custom/_buttons.scss
@@ -2,6 +2,15 @@
   &:hover {
     @include animate-bg;
   }
+
+  &.-text-large {
+    font-size:  18px;
+  }
+
+  &.-text-xlarge {
+    font-size:  30px;
+  }
+
   border: 0;
   border-radius: 4px;
 }
