Add section style

--- a/sass/epretest/_theme.scss
+++ b/sass/epretest/_theme.scss
@@ -16,6 +16,7 @@
 //## Add @import to load components in epretest directory here
 //** e.g.
 //@import 'epretest/spash' to import _splash.scss
+@import  'epretest/section-title';
 
 //= Page specific style
 //## The page specific styles must be imported last
