--- a/sass/epretest/epretest/_variables.scss
+++ b/sass/epretest/epretest/_variables.scss
@@ -1,7 +1,7 @@
 $splash-bg-color:         #34282c;
 $splash-color:            #fff;
 $splash-padding-bottom:   300px;
-$splash-padding-top:      50px;
+$splash-padding-top:      70px;
 $splash-overlay-opacity:  .6;
 
 $exam-card-border:       #ccc;
@@ -9,3 +9,7 @@ $exam-card-bg-color:     #21abc7;
 $exam-card-color:        #fff;
 $exam-card-horz-padding: 15px;
 $exam-card-vert-padding: 15px;
+
+$section-vert-margin:           70px;
+$section-name-font-size:        30px;
+$section-description-font-size: 30px;
