Playing with exam-card style

--- a/sass/epretest/_theme.scss
+++ b/sass/epretest/_theme.scss
@@ -17,6 +17,7 @@
 //** e.g.
 //@import 'epretest/spash' to import _splash.scss
 @import  'epretest/section-title';
+@import  'epretest/exam-card';
 
 //= Page specific style
 //## The page specific styles must be imported last
