--- a/sass/epretest/epretest/_variables.scss
+++ b/sass/epretest/epretest/_variables.scss
@@ -4,11 +4,10 @@ $splash-padding-bottom:   300px;
 $splash-padding-top:      70px;
 $splash-overlay-opacity:  .6;
 
-$exam-card-border:       #ccc;
-$exam-card-bg-color:     #21abc7;
-$exam-card-color:        #fff;
-$exam-card-horz-padding: 15px;
-$exam-card-vert-padding: 15px;
+$exam-card-border:       #fca311;
+$exam-card-bg-color:     #fca311;
+$exam-card-color:        #000;
+$exam-card-tag-size:     90px;
 
 $section-vert-margin:           70px;
 $section-name-font-size:        30px;
