--- a/sass/epretest/_theme.scss
+++ b/sass/epretest/_theme.scss
@@ -16,7 +16,8 @@
 //## Add @import to load components in epretest directory here
 //** e.g.
 //@import 'epretest/spash' to import _splash.scss
-@import  'epretest/section-title';
+@import  'epretest/text';
+@import  'epretest/section';
 @import  'epretest/exam-card';
 
 //= Page specific style
