--- a/sass/epretest/epretest/_variables.scss
+++ b/sass/epretest/epretest/_variables.scss
@@ -4,11 +4,13 @@ $splash-padding-bottom:   300px;
 $splash-padding-top:      70px;
 $splash-overlay-opacity:  .6;
 
-$exam-card-border:       #fca311;
+$exam-card-border:       0;
 $exam-card-bg-color:     #fca311;
 $exam-card-color:        #000;
-$exam-card-tag-size:     90px;
+$exam-card-tag-size:     85px;
 
-$section-vert-margin:           70px;
-$section-name-font-size:        30px;
-$section-description-font-size: 30px;
+$section-grey-bg-color:  #eee;
+
+$title-font-size:    48px;
+$subtitle-font-size: 30px;
+$highlight-color:    #fca311;
