--- a/sass/epretest/bootstrap-custom/_normalize.scss
+++ b/sass/epretest/bootstrap-custom/_normalize.scss
@@ -1,5 +1,7 @@
 html,
 body {
+  -webkit-font-smoothing: antialiased;
   font-family: 'Kanit', sans-serif;
   font-weight: 200;
+  text-shadow: 1px 1px 1px $text-shadow-color;
 }
