--- a/sass/epretest/bootstrap-custom/_variables.scss
+++ b/sass/epretest/bootstrap-custom/_variables.scss
@@ -9,7 +9,7 @@ $btn-default-bg:    #21abc7;
 $btn-default-color: #fff;
 
 $btn-primary-bg:    #fca311;
-$btn-primary-color: #070707;
+$btn-primary-color: #fff;
 
 //== Navbar
 //
