--- a/sass/epretest/_theme.scss
+++ b/sass/epretest/_theme.scss
@@ -19,6 +19,8 @@
 @import  'epretest/text';
 @import  'epretest/section';
 @import  'epretest/exam-card';
+@import  'epretest/subject-card';
+@import  'epretest/footer';
 
 //= Page specific style
 //## The page specific styles must be imported last
