Add more space to subject

--- a/sass/epretest/epretest/_subject-card.scss
+++ b/sass/epretest/epretest/_subject-card.scss
@@ -1,5 +1,5 @@
 .subject-card {
-  
+
   text-align: center;
 
   >img {
@@ -12,5 +12,6 @@
 
 .subject-name {
   font-size:  36px;
+  margin:     10px auto;
   text-align: center;
 }
